# Pwnagotchi-Fork---Mr-Bumchinz

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RECOVERY.md  pyproject.toml
plugins/custom/: nexmon_stability.py  pwnaui_themes.py  pwnhub_stats.py
pwnagotchi/: agent.py  log.py  utils.py  voice.py
pwnagotchi/plugins/: __init__.py
pwnagotchi/ui/: components.py  display.py  faces.py  pwnaui_patch.py  view.py  view.py.bak
pwnaui/: .gitignore  Makefile  README.md  install.sh  pwnaui.service  test_face_render.py  test_themes.py  themes.c
pwnaui/docs/: ARCHITECTURE.md
pwnaui/nexmon_fixes/: INSTALL.md
pwnaui/plugins/: nexmon_stability.py
pwnaui/python/: __init__.py  pwnaui_client.py  pwnaui_view.py  themes.py  web_themes.py
pwnaui/scripts/: download_themes.py  pwnaui-hostname-sync  pwnaui_wifi_recovery.sh
pwnaui/src/: ap_database.c  ap_database.h  ap_triage.c  ap_triage.h  attack_log.c  attack_log.h  bcap_test.c  bcap_ws.c  bcap_ws.h  brain.c  brain.h  brain_attacks.c  brain_attacks.h  brain_handshake.c  brain_handshake.h  channel_bandit.c  channel_bandit.h  channel_map.c  channel_map.h  compat_isoc23.c  crack_manager.c  crack_manager.h  display.c  driving_mode.c  driving_mode.h  eapol_monitor.c  eapol_monitor.h  faces.c  firmware_health.c  firmware_health.h  font.c  gps.c  gps_listener.c  gps_refine.c  gps_refine.h  hash_sync.c  hash_sync.h  hc22000.c  hc22000.h  (+50 more)
pwnaui_BACKUP_20260130_123704/: Makefile  debug_pwnachu.py  deploy.sh  pwnaui.service  test_face_size.py  test_theme_debug.c  themes.py
scripts/: install.sh  rollback.sh  update.sh
system/: README.md  bt_gps_receiver.c  install-system.sh
(+116 files in other folders)
