[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwnagotchi"
version = "2.9.5.3"
description = "Deep Reinforcement Learning Framework for Autonomous WiFi Penetration Testing"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "evilsocket", email = "evilsocket@gmail.com"},
    {name = "jayofelony"},
    {name = "MrBumChinz"}
]
keywords = ["pwnagotchi", "wifi", "deep-learning", "keras", "tensorflow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
requires-python = ">=3.7"
dependencies = [
    "pycryptodome>=3.9.8",
    "setuptools>=39.0.1",
    "tweepy>=3.9.0",
    "tensorflow>=2.3.0",
    "numpy>=1.16.0",
    "Pillow>=5.4.0",
    "scapy>=2.4.0",
    "requests>=2.20.0",
    "flask>=1.0.0",
    "flask-cors>=3.0.8",
    "pcapy-ng",
]

[project.optional-dependencies]
dev = ["pytest>=5.0.0", "black>=20.8b1"]

[project.urls]
Homepage = "https://pwnagotchi.ai"
Documentation = "https://pwnagotchi.ai/stable/index.html"
Repository = "https://github.com/jayofelony/pwnagotchi"

[tool.setuptools]
packages = ["pwnagotchi"]

[tool.setuptools.package-data]
pwnagotchi = [
    "locale/*/LC_MESSAGES/*.mo",
    "ui/web/templates/*",
    "ui/web/static/**/*",
]
